--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -18,6 +18,9 @@
         </div>
         <div id="main-navbar" class="navbar-menu">
             <div class="navbar-end">
+                {% for category in menu_categories %}
+                    <a class="navbar-item">{{ category.title }}</a>
+                {% endfor %}
                 <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
             </div>
         </div>
