--- a/apps/store/templates/category_detail.html
+++ b/apps/store/templates/category_detail.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <h1 class="title">{{ category.title }}</h1>
     <div class="columns is-multiline">
         {% for product in products %}
         <div class="column is-3">
@@ -14,7 +15,7 @@
                     </div>
                 </div>
                 <footer class="card-footer">
-                    <a href="{% url 'product_detail' product.category.slug product.slug %}" class="card-footer-item">View</a>
+                    <a href="{% url 'product_detail' category.slug product.slug %}" class="card-footer-item">View</a>
                 </footer>
             </div>
         </div>
